--- a/03《微博@Liberalisman面试知识点总结》/面试题.md
+++ b/03《微博@Liberalisman面试知识点总结》/面试题.md
@@ -1,41 +1,45 @@
 # 面试题
 - 1.[LAC（两个view的第一个公共父view） H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#1lac两个view的第一个公共父view-h)
-- 2.[sum（n）H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#2sumnh)
-- 3.[K个一组反转链表](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#3k个一组反转链表)
-- 4.[合并多个升序的数组为一个降序数组 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#4合并多个升序的数组为一个降序数组-h)
-- 5.[属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#5属性redawritereadonlyassignretaincopynonatomic各有什么作用在哪种情况下用h)
-- 6.[属性是否可以扩展，如何扩展 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#6属性是否可以扩展如何扩展-h)
-- 7.[weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#7weak属性是否需要在dealloc中置nil底层实现怎么样的-h)
-- 8.[autorelease实现逻辑 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#8autorelease实现逻辑-h)
-- 9.[Runloop和线程有什么关系 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#9runloop和线程有什么关系-h)
-- 10.[runloop各种状态处理了那些事 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#10runloop各种状态处理了那些事-h)
-- 11.[OC中的类方法和实例方法有什么区别和联系？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#11oc中的类方法和实例方法有什么区别和联系-h)
-- 12.[使用block时什么情况会发生引用循环，如何处理；H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#12使用block时什么情况会发生引用循环如何处理h)
-- 13.[一个block捕获到了一个局部变量，一个block捕获到了两个局部变量，这两个block的类型是一样的吗？其内部布局相同吗？如果类型想同，内存布局不同的话，为什么类型相同的实例，其内存布局不同？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#13一个block捕获到了一个局部变量一个block捕获到了两个局部变量这两个block的类型是一样的吗其内部布局相同吗如果类型想同内存布局不同的话为什么类型相同的实例其内存布局不同-h)
-- 14.[Runtime如何通过selector找到对应的IMP地址？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#14runtime如何通过selector找到对应的imp地址h)
-- 15.[Method Swizzling，Method Swizzie是发如何确保安全的替换方法的？如何确保替换的不是父类的方法？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#15method-swizzlingmethod-swizzie是发如何确保安全的替换方法的如何确保替换的不是父类的方法h)
-- 16.[A是父类，B和C同时继承于A,在B里面对父类方法进行交换，对C是否有影响  H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#16a是父类b和c同时继承于a在b里面对父类方法进行交换对c是否有影响--h)
-- 17.[简述内存分区情况 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#17简述内存分区情况-h)
-- 18.[方法缓存，为什么需要方法缓存，什么情况下会有问题；H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#18方法缓存为什么需要方法缓存什么情况下会有问题h)
-- 19.[多线程，设计一个读写锁 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#19多线程设计一个读写锁-h)
-- 20.[并行同步和串行异步区别 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#20并行同步和串行异步区别-h)
-- 21.[栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#21栅栏函数dispatch_barries_async有什么作用有什么使用场景h)
-- 22.[请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#22请举出5个以上ios中被称为黑魔法的编译宏并解释其作用-h)
-- 23.[请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#23请描述9种软件设计的原则并分别描述你在设计一个sdk的时候是如果运用这些原则的-h)
-- 24.[面向协议编程特点 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#24面向协议编程特点-h)
-- 25.[如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#25如何捕获ios的crash如果捕获c的crash如果捕获switch的crash前端如何捕获js的crshflutter如何捕获crash-h)
-- 26.[Swift如果调用C代码](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#26swift如果调用c代码)
-- 27.[Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#27swift如何调用方法c如何调用方法和oc的runtime有什么区别)
-- 28.[WKWebView都有那些坑](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#28wkwebview都有那些坑)
-- 29.[iOS中的WebView如何优化](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#29ios中的webview如何优化)
-- 30.[小程序是如何实现的](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#30小程序是如何实现的)
-- 31.[JSPatch是如何实现的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#31jspatch是如何实现的-h)
-- 32.[请描述23种设计模式在iOS中的例子](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#32请描述23种设计模式在ios中的例子)
-- 33.[在设计插件的时候，应该如何运用23中设计模式？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#33在设计插件的时候应该如何运用23中设计模式)
-- 34.[如何保证iOS App的安全](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#34如何保证ios-app的安全)
-- 35.[如何做iOS逆向](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#35如何做ios逆向)
-- 36.[请列举Unix信号](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#36请列举unix信号)
-- 37.[请列举Swift常用的关键字和用法（比如final、lazy等）](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#37请列举swift常用的关键字和用法比如finallazy等)
+- 2.给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+- 3.[sum（n）H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#3sumnh)
+- 4.[K个一组反转链表](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#4k个一组反转链表)
+- 5.[合并多个升序的数组为一个降序数组 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#5合并多个升序的数组为一个降序数组-h)
+- 6.[属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#6属性redawritereadonlyassignretaincopynonatomic各有什么作用在哪种情况下用h)
+- 7.assign修饰的属性存在什么地方 H
+- 8.[属性是否可以扩展，如何扩展 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#8属性是否可以扩展如何扩展-h)
+- 9.[weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#9weak属性是否需要在dealloc中置nil底层实现怎么样的-h)
+- 10.[autorelease实现逻辑 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#10autorelease实现逻辑-h)
+- 11.[Runloop和线程有什么关系 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#11runloop和线程有什么关系-h)
+- 12.[runloop各种状态处理了那些事 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#12runloop各种状态处理了那些事-h)
+- 13.[OC中的类方法和实例方法有什么区别和联系？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#13oc中的类方法和实例方法有什么区别和联系-h)
+- 14.[使用block时什么情况会发生引用循环，如何处理；H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#14使用block时什么情况会发生引用循环如何处理h)
+- 15.[一个block捕获到了一个局部变量，一个block捕获到了两个局部变量，这两个block的类型是一样的吗？其内部布局相同吗？如果类型想同，内存布局不同的话，为什么类型相同的实例，其内存布局不同？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#15一个block捕获到了一个局部变量一个block捕获到了两个局部变量这两个block的类型是一样的吗其内部布局相同吗如果类型想同内存布局不同的话为什么类型相同的实例其内存布局不同-h)
+- 16.[Runtime如何通过selector找到对应的IMP地址？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#16runtime如何通过selector找到对应的imp地址h)
+- 17.[Method Swizzling，Method Swizzie是发如何确保安全的替换方法的？如何确保替换的不是父类的方法？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#17method-swizzlingmethod-swizzie是发如何确保安全的替换方法的如何确保替换的不是父类的方法h)
+- 18.[A是父类，B和C同时继承于A,在B里面对父类方法进行交换，对C是否有影响  H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#18a是父类b和c同时继承于a在b里面对父类方法进行交换对c是否有影响--h)
+- 19.[简述内存分区情况 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#19简述内存分区情况-h)
+- 20.[方法缓存，为什么需要方法缓存，什么情况下会有问题；H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#20方法缓存为什么需要方法缓存什么情况下会有问题h)
+- 21.[多线程，设计一个读写锁 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#21多线程设计一个读写锁-h)
+- 22.[并行同步和串行异步区别 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#22并行同步和串行异步区别-h)
+- 23.[栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#23栅栏函数dispatch_barries_async有什么作用有什么使用场景h)
+- 24.[请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#24请举出5个以上ios中被称为黑魔法的编译宏并解释其作用-h)
+- 25.[请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#25请描述9种软件设计的原则并分别描述你在设计一个sdk的时候是如果运用这些原则的-h)
+- 26.编译器gcc、g++和clang（llvm）之间的不同和编译流程 H
+- 27.[面向协议编程特点 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#27面向协议编程特点-h)
+- 28.[如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#28如何捕获ios的crash如果捕获c的crash如果捕获switch的crash前端如何捕获js的crshflutter如何捕获crash-h)
+- 29.[Swift如果调用C代码](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#29swift如果调用c代码)
+- 30.[Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#30swift如何调用方法c如何调用方法和oc的runtime有什么区别)
+- 31.[WKWebView都有那些坑](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#31wkwebview都有那些坑)
+- 32.WKWebView和UIWebView的区别
+- 33.[iOS中的WebView如何优化](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#33ios中的webview如何优化)
+- 34.[小程序是如何实现的](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#34小程序是如何实现的)
+- 35.[JSPatch是如何实现的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#35jspatch是如何实现的-h)
+- 36.[请描述23种设计模式在iOS中的例子](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#36请描述23种设计模式在ios中的例子)
+- 37.[在设计插件的时候，应该如何运用23中设计模式？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#37在设计插件的时候应该如何运用23中设计模式)
+- 38.[如何保证iOS App的安全](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#38如何保证ios-app的安全)
+- 39.[如何做iOS逆向](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#39如何做ios逆向)
+- 40.[请列举Unix信号](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#40请列举unix信号)
+- 41.[请列举Swift常用的关键字和用法（比如final、lazy等）](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#41请列举swift常用的关键字和用法比如finallazy等)
 
 
 # 面试题
@@ -158,8 +162,73 @@
     return answer;
 }
 ```
-### 2.sum（n）H
 
+### 2.给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+#### 递归方法
+
+```
+class Solution {
+
+    private TreeNode ans;
+
+    public Solution() {
+        this.ans = null;
+    }
+
+    private boolean dfs(TreeNode root, TreeNode p, TreeNode q) {
+        if (root == null) return false;
+        boolean lson = dfs(root.left, p, q);
+        boolean rson = dfs(root.right, p, q);
+        if ((lson && rson) || ((root.val == p.val || root.val == q.val) && (lson || rson))) {
+            ans = root;
+        } 
+        return lson || rson || (root.val == p.val || root.val == q.val);
+    }
+
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        this.dfs(root, p, q);
+        return this.ans;
+    }
+}
+
+```
+#### 存储父节点
+- 我们可以用哈希表存储所有节点的父节点，然后我们就可以利用节点的父节点信息从 p 结点开始不断往上跳，并记录已经访问过的节点，再从 q 节点开始不断往上跳，如果碰到已经访问过的节点，那么这个节点就是我们要找的最近公共祖先。
+
+```
+class Solution {
+    Map<Integer, TreeNode> parent = new HashMap<Integer, TreeNode>();
+    Set<Integer> visited = new HashSet<Integer>();
+
+    public void dfs(TreeNode root) {
+        if (root.left != null) {
+            parent.put(root.left.val, root);
+            dfs(root.left);
+        }
+        if (root.right != null) {
+            parent.put(root.right.val, root);
+            dfs(root.right);
+        }
+    }
+
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        dfs(root);
+        while (p != null) {
+            visited.add(p.val);
+            p = parent.get(p.val);
+        }
+        while (q != null) {
+            if (visited.contains(q.val)) {
+                return q;
+            }
+            q = parent.get(q.val);
+        }
+        return null;
+    }
+}
+```
+
+### 3.sum（n）H
 #### n和数的和：（n+1）n/2
 #### 判断数组中是否有两个数字之和等于目标值
 ##### 双指针
@@ -183,7 +252,7 @@ public:
 - 如果每次选中一个数，然后遍历整个数组，判断是否有另一个数使两者之和满足条件。这种时间复杂度为O(n^2)
 - 在遍历数组的过程中，利用集合保存遍历的当前值。若集合中存在目标值减去当前值的差值，说明数组中一定有一个数与当前值之和等于目标值。这种时间复杂度为O(n)，
 
-### 3.K个一组反转链表
+### 4.K个一组反转链表
 ```
 class Solution:
     # 翻转一个子链表，并且返回新的头与尾
@@ -217,7 +286,7 @@ class Solution:
         return hair.next
 ```
 
-### 4.合并多个升序的数组为一个降序数组 H
+### 5.合并多个升序的链表为一个降序链表 H
 - 暴力解决for循环
 - 利用优先级队列进行节点排序
 ```
@@ -251,7 +320,7 @@ class Solution {
 
 ```
 
-### 5.属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H
+### 6.属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H
 - readwrite：可读可写特性,需要生成setter和getter方法时使用, 可被外界读取和修改；
 - readonly：只读特性,只会生成getter方法,只可被外界读取, 不能修改；
 - assign：赋值特性,作用于非OC对象的赋值,setter方法将参数传给变量；主要用于修饰对象和基本数据类型，例如NSInteger，CGFloat，int，遵循先进后出的原则，存储在栈中，内存不用程序员管理。assign是可以修饰对象的，但是会出现问题。问题是：
@@ -275,12 +344,17 @@ class Solution {
 - __unsafe_unretain：类似于weak，但是当对象被释放后，指针已然保存着之前的地址，被释放后的地址变为僵尸对象，访问被释放的地址就会出问题，所以说他是不安全的。
 - __autoreleasing：将对象赋值给附有__autoreleasing修饰的变量等同于 ARC 无效时调用对象的autorelease方法,实质就是扔进了自动释放池。
 
-### 6.属性是否可以扩展，如何扩展 H
+### 7.assign修饰的属性存在什么地方 H
+- assign可以修饰非oc对象，也可以修饰oc对象，但是assign修饰的oc对象是有问题的：
+    * - weak生成的成员变量是用__weak修饰的，assign生成的成员变量是用__unsafe_unretained修饰的；
+    * 对象开辟的空间是在堆空间，指针开辟的空间是在栈上，使用assign修饰，当对象销毁时并不会将指针置为nil。所以当堆空间的对象销毁时指向对象的指针仍然存在，会造成野指针，当访问该对象时会crash报错EXC_BAD_ACCESS。因为基本数据类型的空间开辟也在栈空间，同样由系统进行销毁，所以不存在野指针的情况。使用weak修饰对象时当对象销毁时指针也会被置为nil，所以用weak不会造成野指针。
+
+### 8.属性是否可以扩展，如何扩展 H
 - 可以
 - 类扩展:能为某个类添加成员变量,属性,方法;
 - 分类：增加属性的时候，由于只声明了set和get方法，并没有实现，可以用关联对象的方法增加；
 
-### 7.weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H
+### 9.weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H
 
 #### 不需要
 - 在ARC环境无论是强指针还是弱指针都无需在 dealloc 设置为 nil ， ARC 会自动帮我们处理
@@ -439,7 +513,7 @@ else {
     * 然后append_referrer(entry, referrer)将我的新弱引用的对象加进去entry
     * 最后weak_entry_insert 把entry加入到我们的weak_table
 
-### 8.autorelease实现逻辑 H
+### 10.autorelease实现逻辑 H
 - autorelease就是自动释放，会像C语言的自动变量那样来对待对象实例。当超出作用于时，对象实例的release实例方法被调用。
 
 #### 具体实现：
@@ -457,13 +531,13 @@ else {
 
 
 
-### 9.Runloop和线程有什么关系 H
+### 11.Runloop和线程有什么关系 H
 - RunLoop是通过内部维护的事件循环(Event Loop)来对事件/消息进行管理的一个对象。
 - run loop和线程是紧密相连的，可以这样说run loop是为了线程而生，没有线程，它就没有存在的必要。Run loops是线程的基础架构部分，
 - 主线程的run loop默认是启动的。
 - 原因：iOS的应用程序里面，程序启动后会有一个如下的main()函数，重点是UIApplicationMain()函数，这里会创建一个主线程，用于UI处理，为了让程序可以一直运行，所以在主线程中开启一个runloop，让主线程常驻。
 
-### 10.runloop各种状态处理了那些事 H
+### 12.runloop各种状态处理了那些事 H
 - kCFRunLoopEntry：RunLoop准备启动
 - kCFRunLoopBeforeTimers：RunLoop将要处理一些Timer相关事件
 - kCFRunLoopBeforeSources：RunLoop将要处理一些Source事件
@@ -472,7 +546,7 @@ else {
 - kCFRunLoopExit：RunLoop退出
 - kCFRunLoopAllActivities：监听所有状态
 
-### 11.OC中的类方法和实例方法有什么区别和联系？ H
+### 13.OC中的类方法和实例方法有什么区别和联系？ H
 - 类方法：
     * 类方法是属于类对象的
     * 类方法只能通过类对象调用
@@ -488,14 +562,14 @@ else {
     * 实例方法中直接调用实例方法
     * 实例方法中也可以调用类方法(通过类名)
 
-### 12.使用block时什么情况会发生引用循环，如何处理；H
+### 14.使用block时什么情况会发生引用循环，如何处理；H
 - 循环引用就是当self 拥有一个block的时候，在block 又调用self的方法。形成你中有我，我中有你，谁都无法将谁释放的困局。其实就是一个对象中强引用了block，在block中又强引用了该对象，就会发生循环引用。
 - 解决方法是将该对象使用__weak或者__block修饰符修饰之后再在block中使用。
     * id weak weakSelf = self; 或者 weak __typeof(&*self)weakSelf = self该方法可以设置宏
     * id __block weakSelf = self;
     * 或者将其中一方强制制空 xxx = nil。
 
-### 13.一个block捕获到了一个局部变量，一个block捕获到了两个局部变量，这两个block的类型是一样的吗？其内部布局相同吗？如果类型想同，内存布局不同的话，为什么类型相同的实例，其内存布局不同？ H
+### 15.一个block捕获到了一个局部变量，一个block捕获到了两个局部变量，这两个block的类型是一样的吗？其内部布局相同吗？如果类型想同，内存布局不同的话，为什么类型相同的实例，其内存布局不同？ H
 
 - Block有三种类型:
     * __NSGlobalBlock,
@@ -503,10 +577,10 @@ else {
     * __NSMallocBlock
 - 类型是一样的，内存的话一个存了一个，一个存了两个；
 
-### 14.Runtime如何通过selector找到对应的IMP地址？H
+### 16.Runtime如何通过selector找到对应的IMP地址？H
 - 每一个类对象中都一个方法列表,方法列表中记录着方法的名称,方法实现,以及参数类型,其实selector本质就是方法名称,通过这个方法名称就可以在方法列表中找到对应的方法实现.
 
-### 15.Method Swizzling，Method Swizzie是发如何确保安全的替换方法的？如何确保替换的不是父类的方法？H
+### 17.Method Swizzling，Method Swizzie是发如何确保安全的替换方法的？如何确保替换的不是父类的方法？H
 #### Method Swizzling
 - 关联对象的的api就只有三个
 
@@ -556,18 +630,18 @@ struct method_t {
 ##### 如何确保替换的不是父类的方法？
 - 首先打印子类的方法列表，判断有没有，如果有的话就直接交换，如果没有的话就添加这个方法，这样就不用替换父类的方法；
 
-### 16.A是父类，B和C同时继承于A,在B里面对父类方法进行交换，对C是否有影响  H
+### 18.A是父类，B和C同时继承于A,在B里面对父类方法进行交换，对C是否有影响  H
 - 首先要看B是否对A的方法承载
 - 如果B对A的方法做了承载，然后进行方法交换，对C就有影响，如果有新的属性声明，C调用的时候就会崩溃；
 - 如果B对A的方法没有承载，然后进行方法交换，其实质就是A本身方法交换，对C就没有影响；
 
-### 17.简述内存分区情况 H
+### 19.简述内存分区情况 H
 - 栈区：存放的局部变量、先进后出、一旦出了作用域就会被销毁；函数跳转地址，现场保护等，内存地址从高到低分配。
 - 堆区：堆区的地址是从低到高分配，通过程序员通过alloc手动分配。
 - 全局区：包含两个部分，未初始化区，初始化区域。全局变量和静态变量在一块区域，未初始化的全局变量和未初始化的静态变量在相邻的另一块区域；
 - 代码区存放于低地址，栈区存放于高地址。区与区之间并不是连续的。堆区的内存是应用程序共享的，堆中的内存分配是系统负责的；当引用计数为0的时候，系统会回收该内存。
 
-### 18.方法缓存，为什么需要方法缓存，什么情况下会有问题；H
+### 20.方法缓存，为什么需要方法缓存，什么情况下会有问题；H
 - 在OC里面调用一个方法的时候，其实就是消息发送；
 - objc_msgSend（就arm平台而言）的消息分发分为以下几个步骤：
     * 判断receiver是否为nil，也就是objc_msgSend的第一个参数self，也就是要调用的那个方法所属对象；
@@ -585,7 +659,7 @@ struct method_t {
     * buckets：用数组表示的hash表，cache_entry类型，每一个cache_entry代表一个方法缓存
 - 问题：当容器扩容之后，前面存储的方法也会随之清空。
 
-### 19.多线程，设计一个读写锁 H
+### 21.多线程，设计一个读写锁 H
 - iOS中常见的一个就是同步任务加栅栏函数，同步读操作，栅栏函数写操作；另一个是pthread_rwlock：等待锁的线程会进入休眠
 - 模拟的话有两把互斥锁加一个整数计数器，条件变量加互斥锁、整型计数器（表示正在读的个数）与布尔标志（表示正在写）来实现
 
@@ -717,7 +791,7 @@ pthread_cond_t cond = PTHREAD_COND_INITIALIZER;
 }
 ```
 
-### 20.并行同步和串行异步区别 H
+### 22.并行同步和串行异步区别 H
 
 
 | 线程 | 同步                                                         | 异步                                                         | 对比                                     |
@@ -726,7 +800,7 @@ pthread_cond_t cond = PTHREAD_COND_INITIALIZER;
 | 并行 | 在主线程操作, 主线程任务等待, 所有任务同时创建, 但是在此队列中, 任务执行为依次执行, 没有轮到的任务处于等待状态, 执行完成后, 执行主线程内容 | 创建多条线程(未必有多少任务创建多少线程, 有点像cell的复用), 按顺序创建任务, 同时执行, 同时, 主线程任务正常执行 | 1.是否阻塞主线程2.任务的执行时间是否统一 |
 |      | 1. 主线程阻塞等待2. 任务的创建和执行时间点                   | 1. 主线程异步执行, 不阻塞.2. 任务的创建和执行时间点          |  
 
-### 21.栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H
+### 23.栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H
 - dispatch_barrier_async/dispatch_barrier_sync（栅栏函数）
     * 作用：与并发队列结合，可以高效率的避免数据竞争的问题
     * 相同点：dispatch_barrier_sync和dispatch_barrier_async函数功能一样就是在并发队列中将此代码插入的地方上下隔开，如果栅栏一样，两部分不影响。只有上边的并发队列都执行结束之后，下边的并发队列才能够执行。
@@ -739,7 +813,7 @@ pthread_cond_t cond = PTHREAD_COND_INITIALIZER;
         * 当前queue是串行队列。 当前queue上调用sync函数，并且sync函数中指定的queue也是当前queue。需要执行的block被放到当前queue的队尾等待执行，因为这是一个串行的queue，调用sync函数会阻塞当前队列,等待block执行 这个block永远没有机会执行sync函数不返回，所以当前队列就永远被阻塞了，这就造成了死锁。（这就是问题中在主线程调用sync函数，并且在sync函数中传入main_queue作为queue造成死锁的情况）
         * 当前queue是并行队列。 在并行的queue上面调用sync函数，同时传入当前queue作为参数，并不会造成死锁，因为block会马上被执行，所以sync函数也不会一直等待不返回造成死锁。（并且Block是在当前线程上执行。例如如果是在主线程上调用了dispatch_sync,则Block是在主线程上执行的）
 
-### 22.请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H
+### 24.请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H
 - attribute是一套编译器指令，被GNU和LLVM编译器所支持，允许对于attribute增加一些参数，做一些高级检查和优化。
 - attribute的语法是，在后面加两个括号，然后写属性列表，属性列表以逗号分隔。
 #### objc_subclassing_restricted
@@ -864,7 +938,7 @@ FOUNDATION_EXPORT void NSLog(NSString *format, ...) NS_FORMAT_FUNCTION(1,2) NS_N
 #define NS_DESIGNATED_INITIALIZER __attribute__((objc_designated_initializer))
 ```
 
-### 23.请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H
+### 25.请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H
 #### 单一职责原则
 - 一个类，只做一件事。每一个职责都是变化的一个轴线，如果一个类有一个以上的职责。这些职责就耦合在了一起。这会导致脆弱的设计。当一个职责发生变化时，可能会影响其它的职责。另外，多个职责耦合在一起，会影响复用性。
 - 例如：
@@ -928,12 +1002,159 @@ FOUNDATION_EXPORT void NSLog(NSString *format, ...) NS_FORMAT_FUNCTION(1,2) NS_N
 - 缺点
     * 通过这种方式复用建造的系统会有较多的对象需要管理
 
-### 24.面向协议编程特点 H
+### 26.编译器gcc、g++和clang（llvm）之间的不同和编译流程 H
+#### 编译器
+- 编译器（compiler）是一种计算机程序，它会将某种编程语言写成的源代码（原始语言）转换成另一种编程语言（目标语言）。
+- 传统编译器的架构，一般分三部分：
+    * 前端（Frontend）：解析源代码，检查源代码是否有错误，并构建特定语言的抽象语法树（Abstract Syntax Tree缩写:AST）来表示输入的代码。也负责选择性的地将AST转换为新的表示形式以进行优化。
+    * 优化器（Optimizer）：负责进行各种转换，以尝试改善代码的运行时间，例如消除冗余计算，并且通常或多或少地独立于编程语言和目标代码。
+    * 后端（Backend）：也称代码生成器，将代码映射到目标架构的指令集上；其常见部分有：指令选择，寄存器分配，指定调度。
+![image](https://upload-images.jianshu.io/upload_images/9636398-0472c2a60ff57394.image?imageMogr2/auto-orient/strip|imageView2/2/w/1200/format/webp)
+- 这种传统编译器的架构有三个成功的案例：
+    * Java和.Net虚拟机；它们都提供了对JIT编译器和运行时的支持，并且还定义了字节码的格式（bytecode），这意味着任何可以编译为字节码的语言，都可以复用优化器和JIT（动态编译）和运行时能力。
+    * 将输入源转换为C代码（或其他某种语言）并通过现有的C编译器编译
+    * 这种模式的最终成功实施是GCC，GCC支持许多前端和后端，并拥有活跃而广泛的贡献者社区。
+
+#### gcc
+- Xcode5之前的版本中使用的是GCC编译器，由于GCC，历史悠久，体系结构相对复杂，功能模块化复用难度大且不受苹果公司的约束，很难满足苹果系统的发展需求。因此在Xcode5中抛弃了GCC,采用Clang/LLVM进行编译。
+- 是GNU Compiler Collection的缩写，指GNU编译器套装。Linux系统的核心组成部分就有GNU工具链，GCC也是GNU工具链的重要组成部分，因此GCC也是作为Linux系统的标准编译器。GCC可处理的语言有C、C++、Objective-C、Java、Go等。
+- 使用GCC命令gcc -ccc-print-phases main.m查看编译OC的步骤:
+
+```
+*deMacBook-Pro:Mach-O *$ gcc -ccc-print-phases main.m
+               +- 0: input, "main.m", objective-c
+            +- 1: preprocessor, {0}, objective-c-cpp-output
+         +- 2: compiler, {1}, ir
+      +- 3: backend, {2}, assembler
+   +- 4: assembler, {3}, object
++- 5: linker, {4}, image
+6: bind-arch, "x86_64", {5}, image
+```
+- GCC的架构
+![image](https://upload-images.jianshu.io/upload_images/9636398-c9a4cef957e816b1.image?imageMogr2/auto-orient/strip|imageView2/2/w/1200/format/webp)
+- 前端读取源文件将其转化为AST,由于每种语言生成的AST是有差异的，所以需要需要转换为通用的与语言无关的统一形式GENERIC。
+- 中端将GENERIC，利用gimplifier技术，简化GENERIC的复杂结构，将其转换为一种中间表示形式称为：GIMPLE，再转换为另一种SSA（static single assignment）的表示形式也是用于优化的，GCC对SSA树执行20多种不同的优化。经过SSA优化后，该树将转换回GIMPLE形式，用来生成一个RTL树，RTL寄存器转换语言，全称(register-transfer language)；RTL是基于硬件的表示形式，与抽象的目标架构相对应，处理寄存器分配、指令调度等。RTL优化过程以RTL形式对树进行优化。
+- 后端使用RTL表示形式生成目标架构的汇编代码。如：x86后端。
+
+#### Clang/LLVM
+##### 概念
+- Xcode5之前的版本中使用的是GCC编译器，由于GCC，历史悠久，体系结构相对复杂，功能模块化复用难度大且不受苹果公司的约束，很难满足苹果系统的发展需求。因此在Xcode5中抛弃了GCC,采用Clang/LLVM进行编译。
+- LLVM项目是模块化和可重用的编译器及工具链技术的集合。名称LLVM是Low Level Virtual Machine的缩写，尽管名称如此，但是LLVM与传统虚拟机关系不大，它是LLVM项目的全名。
+- LLVM有许多的子项目，比如Clang,LLDB,MLIR等。
+- LLVM起源于2000年Vikram Adve与Chris Lattner的研究，目的：为所有的静态语言（C/C++）和动态语言（运行时改变其结构的语言，如:OC/JavaScript ）创造出动态编译技术。
+- LLVM广义是指LLVM整个架构，狭义指Clang编译器的后端。
+
+##### LLVM的架构
+- LLVM最重要的设计是中间表示LLVM Intermediate Representation(IR)，它是在编译器中表示代码的一种形式。优化器使用LLVM IR作中间的转换与分析处理。LLVM IR本身就是具有良好语义定义的一流语言。
+- 在基于LLVM的编译器中，Frontend负责对输入的代码进行解析，校验和分析错误，然后将解析后的代码转换为LLVM IR（通常情况，是将构建的抽象语法树AST转换为LLVM IR，但不总是这样的）。可以选择通过一系列分析和优化过程来传递LLVM IR，以改进代码，然后将其发送到代码生成器（Backend）中，生成原始的机器码。
+![image](https://upload-images.jianshu.io/upload_images/9636398-e21fcd20de6c3273.image?imageMogr2/auto-orient/strip|imageView2/2/w/1200/format/webp)
+- LLVM IR不仅是完整的代码表示，而且也是优化器optimizer的唯一接口。这意味着写一个LLVM的前端只需要知道LLVM IR即可，这是LLVM的一个新颖的特性，也是LLVM成功地被广泛应用的一个主要原因。反观GCC编译器，写一个前端需要知道生成的GCC树的数据结构以及使用GIMPLE去写GCC的前端，GCC后端需要知道RTL是如何工作的。
+- LLVM IR是前端输出，后端的输入：
+![image](https://upload-images.jianshu.io/upload_images/9636398-0fc388bb3881c8af.image?imageMogr2/auto-orient/strip|imageView2/2/w/1200/format/webp)
+
+##### 为什么需要 IR
+- 编译器的架构分为前端、优化器和后端。传统编译器（如 CGG ）的前端和后端没有完全分离，耦合在了一起，因而如果要支持一门新的语言或硬件平台，需要做大量的工作。而 LLVM 和传统编译器最大的不同点在于，前端输入的任何语言，在经过编译器前端处理后，生成的中间码都是 IR 格式的。
+- 这样做的优点是如果需要支持一种新的编程语言，那么我们只需要实现一种新的前端。如果我们需要支持一种新的硬件设备，那我们只需要实现一个新的后端。而优化阶段因为是针对了统一的 LLVM IR ，所以它是一个通用的阶段，不论是支持新的编程语言，还是支持新的硬件设备，这里都不需要对优化阶段做修改
+- LLVM IR 的三种格式：
+    * 内存中的编译中间语言
+    * 硬盘上存储的可读中间格式（以 .ll 结尾）
+    * 硬盘上存储的二进制中间语言（以 .bc 结尾）例如：Bitcode
+
+#### Clang
+- Clang 是 LLVM 的子项目，是 C、C++ 和 Objective-C 编译器，目标是替代传统编译器 GCC 。Clang 在整个 Objective-C 编译过程中扮演了编译器前端的角色，同时也参与到了 Swift 编译过程中的 Objective-C API 映射阶段。Clang编译Objective-C代码时速度为GCC的3倍。
+- Clang 的主要功能是输出代码对应的抽象语法树（ AST ），针对用户发生的编译错误准确地给出建议，并将代码编译成 LLVM IR。
+- Clang 的特点是编译速度快，模块化，代码简单易懂，诊断信息可读性强，占用内存小以及容易扩展和重用等。
+
+##### Clang编译过程
+- 首先我们运行clang -ccc-print-phases main.m查看整体的编译过程：
+
+```
+*deMacBook-Pro:Mach-O *$ clang -ccc-print-phases main.m
+               +- 0: input, "main.m", objective-c
+            +- 1: preprocessor, {0}, objective-c-cpp-output
+         +- 2: compiler, {1}, ir
+      +- 3: backend, {2}, assembler
+   +- 4: assembler, {3}, object
++- 5: linker, {4}, image
+6: bind-arch, "x86_64", {5}, image
+```
+- 预处理
+    * 比如把宏嵌入到对应的位置,头文件的导入,去除注释（ clang -E main.m ），源代码文件中的以"#"开头的预编译指令，不检查语法错误。
+- 词法分析
+    * 这里会把代码切成一个个 Token，比如大小括号，等于号还有字符串等
+    * 我们可以把这些 Token 类型，分为下面这 4 类：
+        * 关键字：语法中的关键字，比如 if、else、while、for 等;
+        * 标识符：变量名;
+        * 字面量：值、数字、字符串;
+        * 特殊符号：加减乘除、左右括号等符号。
+- 语法分析
+    * 验证语法是否正确
+    * 这个阶段有两个模块Parser(语法syntax分析器)、Sema(语义分析Semantic)配合完成
+        * Parser：遍历每个Token做词句分析，根据当前语言的语法，验证语法是否正确，最后生成一个 节点（Nodes）并记录相关的信息。
+        * Semantic：在Lex 跟 syntax Analysis之后, 已经确保 词 句已经是正确的形式，semantic 接着做return values, size boundaries, uninitialized variables 等检查，如果发现语义上有错误给出提示；如果没有错误就会将 Token 按照语法组合成语义，生成 Clang 语义节点(Nodes)，然后将这些节点按照层级关系构成抽象语法树(AST)。
+- 生成 AST 
+    * 将所有节点组成抽象语法树 AST
+- 静态分析
+    * 分析代码是否存在问题，给出错误信息和修复方案
+- 生成 LLVM IR
+    * CodeGen 会负责将语法树自顶向下遍历逐步翻译成 LLVM IR
+- 生成字节码 (LLVM Bitcode)
+- 生成相关汇编
+- 生成目标文件
+- 生成可执行文件
+
+##### 总结
+- 首先我们编写完成代码之后，会通过LLVM编译器预处理我们的代码，比如将宏放在指定的位置
+- 预处理结束之后，LLVM会对代码进行词法分析和语法分析，生成AST。AST是抽象语法树，主要用来进行快速遍历，实现静态代码检查的功能。
+- AST会生成IR，IR是一种更加接近机器码的语言，通过IR可以生成不同平台的机器码。对于iOS平台，IR生成的可执行文件就是Mach-O.
+- 然后通过链接器将符号和地址绑定在一起，并且将项目中的多个Mach-O文件(目标文件)合并成一个Mach-O文件(可执行文件)。
+- 将可执行文件与资源文件、storyboard、xib等打包，最后通过签名等操作生成.app文件，然后对.app文件进行压缩就生成了我们可以安装的ipa包。
+
+#### Swift 编译器
+- 和 Clang 一样，Swift 编译器主要负责对 Swift 源代码进行静态分析和纠错，并转换为 LLVM IR 。他是 Swift 编译的前端模块。不过和 Clang 不同，Swift 编译器会多出 SIL optimizer ，它会先将 Swift 文件转换成中间代码 SIL ，然后再根据 SIL 生成 IR 
+- Swift 编译器的主要工作：
+    * 解析：解析器负责生成没有任何语义或类型信息的抽象语法树（ AST ），并针对输入源的语法问题发出警告或错误
+    * 词法分析：获取解析的 AST 并将其转换为格式良好，完全类型检查的AST形式，为源代码中的词法问题发出警告或错误
+    * Clang 导入器：导入 Clang 模块并将它们导出的 C 或 Objective-C API 映射到相应的 Swift API
+    * SIL 生成：将经过类型检查的 AST 降级为 SIL
+    * SIL 规范化：执行额外的数据流诊断（例如使用未初始化的变量）
+    * SIL 优化：为程序执行额外的高级 Swift 特定优化，包括自动引用计数优化，虚拟化和通用专业化
+    * LLVM IR 生成：将 SIL 降级到 LLVM IR
+
+##### 为什么要增加 SIL 层
+- Swift 中间语言（ SWIFT Integration Layer ）是一种高级的，特定于 Swift 的中间语言，适用于进一步分析和优化 Swift 代码。SIL 属于 High-Level IR，其相对于LLVM IR 的抽象层级更高，而且是特定于 Swift 语言的。
+- 在 Swift 的编译过程中，SIL 会在生成 LLVM IR 之前做好所有的分析和规范化，并在 IRGen 的帮助下降级到 LLVM IR ，避免了部分重复任务，也使得整个编译流程更加统一。
+- 而且因为 Swift 在编译时就完成了方法绑定直接通过地址调用属于强类型语言，方法调用不再是像 Objective-C 那样的消息转发，这样编译就可以获得更多的信息用在后面的后端优化上。因此我们可以在 SIL 上对 Swift 做针对性的优化，而这些优化是 LLVM IR 所无法实现的。
+- 这些优化包括：
+    * 临界拆分：不支持任意的基础 block 参数通过终端进行临界拆分
+    * 泛型优化：分析泛型函数的特定调用,并生成新的特定版本的函数.然后将泛型的特定用法全部重写为对应的特定函数的直接调用
+    * witness和虚函数表的去虚拟化优化：通过给定类型去查找关联的类的虚函数表或者类型的 witness 表,并将虚函数调用替换为调用函数映射
+    * 内联优化：对于transparent函数进行内联
+    * 内存提升：将 alloc_box 结构优化为 alloc_stack
+    * 引用计数优化
+    * 高级领域特定优化：对基础的 Swift 类型容器（类似 Array 或 String ）实现了高级优化
+    * 通过分析和检查的安全 SIL 会被 IRGen 转换成 LLVM IR，并进一步接受 LLVM 的优化。
+
+#### GCC和G++的编译过程
+##### GCC
+- 1.预处理，生成预编译文件（.文件）：Gcc –E hello.c –o hello.i
+- 2.编译，生成汇编代码（.s文件）：Gcc –S hello.i –o hello.s
+- 3.汇编，生成目标文件（.o文件）：Gcc –c hello.s –o hello.o
+- 4.链接，生成可执行文件：Gcc hello.o –o hello
+- 总结：命令gcc首先调用cpp进行预处理，在预处理过程中，对源代码文件中的文件包含(include)、预编译语句(如宏定义define等)进行分析。接着调用cc1进行编译，这个阶段根据输入文件生成以.o为后缀的目标文件。汇编过程是针对汇编语言的步骤，调用as进行工作，一般来讲，.S为后缀的汇编语言源代码文件和汇编、.s为后缀的汇编语言文件经过预编译和汇编之后都生成以.o为后缀的目标文件。当所有的目标文件都生成之后，gcc就调用ld来完成最后的关键性工作，这个阶段就是连接。在连接阶段，所有的目标文件被安排在可执行程序中的恰当的位置，同时，该程序所调用到的库函数也从各自所在的档案库中连到合适的地方。
+
+##### GCC和G++的区别
+- gcc 和 g++ 的区别无非就是调用的编译器不同, 并且传递给链接器的参数不同.
+    * g++ 会把 .c 文件当做是 C++ 语言 (在 .c 文件前后分别加上 -xc++ 和 -xnone, 强行变成 C++), 从而调用 cc1plus 进行编译；gcc 会把 .c 文件当做是 C 语言. 从而调用 cc1 进行编译.
+    * g++ 遇到 .cpp 文件也会当做是 C++, 调用 cc1plus 进行编译；gcc 遇到 .cpp 文件, 会处理成 C++ 语言. 调用 cc1plus 进行编译.
+    * g++ 还会默认告诉链接器, 让它链接上 C++ 标准库；gcc 默认不会链接上 C++ 标准库.
+
+### 27.面向协议编程特点 H
 - 即在程序设计中，不要以一个类开始设计，应该从一个协议开始，应抛弃之前OOP的对象设计理念，设计协议，这样不同的继承链之间也可以使用同一个协议。可以将协议看做一个组件，哪里需要哪里继承协议即可，而且协议是可以多继承的，iOS中的类只能单继承，这也是面向协议相对面向对象的一大优势。
 - 我理解的OC和swift面向协议编程一个最大区别是OC的 Protocol 没有默认的实现，需要依赖具体的实现类实现协议定义的方法，而Swift2.0开始提供了Protocol + Extension，协议可以再 Extension中提供默认的实现，这样上层调用可以直接调用协议的默认实现。
 - 严谨来说，OC不是一门面向协议编程的语言，因为 Protocol 只提供定义，而不提供实现，所以叫他 面向接口编程 更合适一些。
 
-### 25.如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H
+### 28.如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H
 #### iOS的Crash
 - Crash的主要原因是你的应用收到了未处理的信号。未处理信号可能来源于三个地方：kernel、其他进程、以及App本身。
 - crash异常也分为三种：
@@ -961,13 +1182,13 @@ FOUNDATION_EXPORT void NSLog(NSString *format, ...) NS_FORMAT_FUNCTION(1,2) NS_N
 - NSException异常属于OC层异常。该异常在OC层如果有对应的NSException（OC异常），就转换成OC异常，OC异常可以在OC层得到处理；如果OC异常一直得不到处理，程序会强行发送SIGABRT信号中断程序。在OC层如果没有对应的NSException，就只能让Unix标准的signal机制来处理了。
 
 
-### 26.Swift如果调用C代码
+### 29.Swift如果调用C代码
 - swift通过工程的桥接文件，调用c的相关代码
 
-### 27.Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？
+### 30.Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？
 - 区别：不是动态的编译就决定了
 
-### 28.WKWebView都有那些坑
+### 31.WKWebView都有那些坑
 #### WKWebView 白屏问题
 - 在 UIWebView 上当内存占用太大的时候，App Process 会 crash；而在 WKWebView 上当总体的内存占用比较大的时候，WebContent Process 会 crash，从而出现白屏现象。
 - 这个时候 WKWebView.URL 会变为 nil, 简单的 reload 刷新操作已经失效，对于一些长驻的H5页面影响比较大。
@@ -1028,11 +1249,28 @@ FOUNDATION_EXPORT void NSLog(NSString *format, ...) NS_FORMAT_FUNCTION(1,2) NS_N
 ```
 参考：[WKWebView 那些坑](https://mp.weixin.qq.com/s/rhYKLIbXOsUJC_n6dt9UfA)
 
-### 29.iOS中的WebView如何优化
+### 32.WKWebView和UIWebView的区别
+- WKWebView 是苹果在 WWDC 2014 上推出的新一代 webView 组件，用以替代 UIKit 中笨重难用、内存泄漏的 UIWebView。WKWebView 拥有60fps滚动刷新率；
+- 优点
+    * 性能和稳定性的大幅提高
+    * 内存占用的减少，大概是UIWebView的1/4 - 1/3
+    * 支持更多HTML5、JS特性：允许JavaScript的Nitro的库加载并使用（移动设备的 Safari 使用 Nitro 引擎，但是 UIWebView 不包括 JIT 编译，所以不支持，体验会慢一些）
+    * 60fps的刷新率以及内置手势的支持
+    * 增加了新的代理方法，可控性更高
+    * estimatedProgress属性实现进度条：不需要像UIWebView一样自己做假进度条（通过NJKWebViewProgress和双层代理技术实现），技术复杂度和代码量，根贴近实际加载进度优化好的多。
+    * JS交互上更方便
+        * 可以和js直接互调函数，不像UIWebView需要第三方库WebViewJavascriptBridge来协助处理和js的交互。
+- 缺点
+    * 不自带cookie
+        * 业界普遍认为 WKWebView 拥有自己的私有存储，不会将 Cookie 存入到标准的 Cookie 容器 NSHTTPCookieStorage 中。会忽略任何的默认网络存储器(NSURLCache, NSHTTPCookieStorage, NSCredentialStorage) 和一些标准的自定义网络请求类(NSURLProtocol,等等.)，导致NSURLCache和NSHTTPCookieStroage无法操作(WKWebView)WebCore进程的缓存和Cookie
+        * 实践发现 WKWebView 实例其实也会将 Cookie 存储于 NSHTTPCookieStorage 中，但存储时机有延迟，在iOS 8上，当页面跳转的时候，当前页面的 Cookie 会写入 NSHTTPCookieStorage 中，而在 iOS 10 上，JS 执行 document.cookie 或服务器 set-cookie 注入的 Cookie 会很快同步到 NSHTTPCookieStorage 中，FireFox 工程师曾建议通过 reset WKProcessPool 来触发 Cookie 同步到 NSHTTPCookieStorage 中，实践发现不起作用，并可能会引发当前页面 session cookie 丢失等问题。
+    * 不支持自定义NSURLProtocol，否则无法发送POST参数
+
+### 33.iOS中的WebView如何优化
 - 预加载
 - 离线缓存
 
-### 30.小程序是如何实现的
+### 34.小程序是如何实现的
 - 小程序的UI视图和逻辑处理是用多个webview实现的，逻辑处理的JS代码全部加载到一个Webview里面，称之为AppService，整个小程序只有一个，并且整个生命周期常驻内存，而所有的视图（wxml和wxss）都是单独的Webview来承载，称之为AppView。所以一个小程序打开至少就会有2个webview进程，正式因为每个视图都是一个独立的webview进程，考虑到性能消耗，小程序不允许打开超过5个层级的页面
 - 通过 WKWebview的window.webkit.messageHandlers.NAME.postMessage实现微信navite代码里实现了两个handler消息处理器：
     * invokeHandler: 调用原生能力
@@ -1044,7 +1282,7 @@ FOUNDATION_EXPORT void NSLog(NSString *format, ...) NS_FORMAT_FUNCTION(1,2) NS_N
 #### AppView
 - 这里可以理解为h5的页面，提供UI渲染，底层提供一个WAWebview.js来提供底层的功能
 
-### 31.JSPatch是如何实现的 H
+### 35.JSPatch是如何实现的 H
 - 热更新用到JSPatch的主要作用还是通过脚本修复一些线上bug，希望能够达到替换OC方法的目标。JSPatch的实现巧妙之处在于：利用了OC的消息转发机制。
 - 直接通过OC代码去调用runtime的API，利用JS和OC两种语言的消息转发机制做了很优雅的实现，稍显不足的是JSPatch只能支持ios7及以上。
 - OC的动态语言特性是在runtime system(全部用C实现，Apple维护了一份开源代码)上实现的，面向对象的Class和instance机制都是基于消息机制。我们平时认为的[object method]，正确的理解应该是[receiver sendMsg], 所有的消息发送会在编译阶段编译为runtime c函数的调用：_obj_sendMsg(id, SEL).
@@ -1057,7 +1295,7 @@ _c('method')的方式； 在_c函数中通过JSContex建立的桥接函数传入
     * 替换原有selector的IMP实现为一个空的IMP实现，这样当objc_class接受到消息之后，就会进行消息转发, 另外需要将selector的初始实现进行保存；将替换的JS方法构造一个JPSelector及其IMP实现（根据返回参数构造），添加到当前class中，并通过cls＋selecotr全局缓存JS方法（全局缓存并没有多大用途，但是对于后面恢复现场比较有用）;
     * 然后改写每个替换方法类的forwadInvocation的实现进行拦截，如果拦截到的Invocation的selctor转化成JPSelector能够响应，说明是一个替换方法，则从Invocation中取参数后调用JPSelector的IMP；
 
-### 32.请描述23种设计模式在iOS中的例子
+### 36.请描述23种设计模式在iOS中的例子
 #### 代理模式
 - 为其他对象提供一种代理以控制对这个对象的访问。
 - 场景：
@@ -1218,9 +1456,9 @@ _c('method')的方式； 在_c函数中通过JSContex建立的桥接函数传入
     * 一个对象的行为取决于它的状态, 并且它必须在运行时刻根据状态改变它的行为。
     * 代码中包含大量与对象状态有关的条件语句。
 
-### 33.在设计插件的时候，应该如何运用23中设计模式？
+### 37.在设计插件的时候，应该如何运用23中设计模式？
 
-### 34.如何保证iOS App的安全
+### 38.如何保证iOS App的安全
 - 首先，我们可以通过iTunes 下载 AppStore的ipa文件(苹果 把开发者上传的ipa包 进行了加壳再放到AppStore中)，所以我们从AppStore下载的ipa都是加壳的，所以不能直接用来反编译。得到ipa文件 可以分析APP 里包含的一些资源，如：图片、plist文件、静态wap页、.bundle 等。所以不要 在plist文件、项目中的静态文件中 存储关键的信息，如果要保存，记得 对称加密（这样可以增加破解的难度）。如果是越狱的手机，从 手机上的PP助手下载的ipa包 都是 脱壳之后的，可以直接用来反编译。
 - 我们可以用软件 查看 APP的沙盒，查看里面存储的 文件:sqlite、plist（NSUserdefault会存到Library下的Preferences中 的 plist文件中）、图片等，NSUserdefault 中不要保存关键信息，如果要保存，还是加密吧。。sqlite也是这样子的。iOS 8.3之前 不越狱的手机也可以 直接用MAC上的PP助手、iTool 来查看 任何APP的沙盒（系统APP除外）。iOS 8.3之后就不行了。越狱手机 都可以查看任意APP的沙盒，包括系统APP的沙盒。还有iOS的系统目录等。
 - 越狱手机 直接用PP助手下载的就是 脱壳的ipa，所以不用再脱了。对AppStore下载的ipa包 可以用工具对加壳的ipa 进行脱壳，再用IDA、Hopper 进行反编译，进行分析 ，可以得到 近乎易懂的 伪代码。但是反编译后的代码 要 一个方法一个方法的去分析，类似面向过程编程。当然也有工具 去提取 项目中的所有.h文件。
@@ -1230,9 +1468,9 @@ _c('method')的方式； 在_c函数中通过JSContex建立的桥接函数传入
 - 最好能 进行 代码混淆，能增加反编译的难度，当然只是增加了难度，还是能破解的。
 - 接口返回的数据 最好也进行 加密。
 
-### 35.如何做iOS逆向
+### 39.如何做iOS逆向
 
-### 36.请列举Unix信号
+### 40.请列举Unix信号
 - SIGABRT：（sigabrt）由调用abort函数产生，进程非正常退出
 - SIGALRM：（sigalrm）用alarm函数设置的timer超时或setitimer函数设置的interval timer超时
 - SIGBUS：（sigbus）某种特定的硬件异常，通常由内存访问引起
@@ -1274,7 +1512,7 @@ _c('method')的方式； 在_c函数中通过JSContex建立的桥接函数传入
 - SIGXCPU：（sigxcpu）当CPU时间限制超时的时候
 - SIGXFSZ：（sigxfsz）进程超过文件大小限制
 
-### 37.请列举Swift常用的关键字和用法（比如final、lazy等）
+### 41.请列举Swift常用的关键字和用法（比如final、lazy等）
 - 用作声明的关键字：
     * let：声明静态变量，类似于const，用let声明的变量不可以再赋值，不然会报错；
     * var：声明变量，是可以改变值；
