--- a/03《微博@Liberalisman面试知识点总结》/面试题.md
+++ b/03《微博@Liberalisman面试知识点总结》/面试题.md
@@ -1,11 +1,11 @@
 # 面试题
 - 1.[LAC（两个view的第一个公共父view） H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#1lac两个view的第一个公共父view-h)
-- 2.给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。
+- 2.[给定一个二叉树, 找到该树中两个指定节点的最近公共祖先。](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#2给定一个二叉树-找到该树中两个指定节点的最近公共祖先)
 - 3.[sum（n）H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#3sumnh)
 - 4.[K个一组反转链表](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#4k个一组反转链表)
 - 5.[合并多个升序的数组为一个降序数组 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#5合并多个升序的数组为一个降序数组-h)
 - 6.[属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#6属性redawritereadonlyassignretaincopynonatomic各有什么作用在哪种情况下用h)
-- 7.assign修饰的属性存在什么地方 H
+- 7.[assign修饰的属性存在什么地方 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#7assign修饰的属性存在什么地方-h)
 - 8.[属性是否可以扩展，如何扩展 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#8属性是否可以扩展如何扩展-h)
 - 9.[weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#9weak属性是否需要在dealloc中置nil底层实现怎么样的-h)
 - 10.[autorelease实现逻辑 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#10autorelease实现逻辑-h)
@@ -24,13 +24,13 @@
 - 23.[栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#23栅栏函数dispatch_barries_async有什么作用有什么使用场景h)
 - 24.[请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#24请举出5个以上ios中被称为黑魔法的编译宏并解释其作用-h)
 - 25.[请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#25请描述9种软件设计的原则并分别描述你在设计一个sdk的时候是如果运用这些原则的-h)
-- 26.编译器gcc、g++和clang（llvm）之间的不同和编译流程 H
+- 26.[编译器gcc、g++和clang（llvm）之间的不同和编译流程 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#26编译器gccg和clangllvm之间的不同和编译流程-h)
 - 27.[面向协议编程特点 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#27面向协议编程特点-h)
 - 28.[如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#28如何捕获ios的crash如果捕获c的crash如果捕获switch的crash前端如何捕获js的crshflutter如何捕获crash-h)
 - 29.[Swift如果调用C代码](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#29swift如果调用c代码)
 - 30.[Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#30swift如何调用方法c如何调用方法和oc的runtime有什么区别)
 - 31.[WKWebView都有那些坑](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#31wkwebview都有那些坑)
-- 32.WKWebView和UIWebView的区别
+- 32.[WKWebView和UIWebView的区别](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#32wkwebview和uiwebview的区别)
 - 33.[iOS中的WebView如何优化](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#33ios中的webview如何优化)
 - 34.[小程序是如何实现的](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#34小程序是如何实现的)
 - 35.[JSPatch是如何实现的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#35jspatch是如何实现的-h)
